--- a/examples/app-example/package.json
+++ b/examples/app-example/package.json
@@ -6,20 +6,22 @@
   "author": "S. P. O. Clayton <sean@seanclayton.me>",
   "license": "ISC",
   "scripts": {
-    "start": "yarn parcel public/index.html --public-url / --open --port 3000"
+    "start": "yarn parcel public/index.html --public-url / --open --port 3000",
+    "clean": "rimraf .cache dist"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-plugin-emotion": "^10.0.14",
     "parcel-bundler": "^1.12.3",
-    "parcel-plugin-livescript": "^1.1.0"
+    "parcel-plugin-livescript": "^1.1.0",
+    "rimraf": "^2.6.3"
   },
   "dependencies": {
     "@emotion/core": "^10.0.14",
     "@emotion/styled": "^10.0.14",
     "json5": "^2.1.0",
     "lodash": "^4.17.11",
-    "ls-react": "file:../../",
+    "ls-react": "^1.1.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
